--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,6 @@
      <div class="logo"><a class="brand" href="#"> <img src="{% static "images/cleanstart_logo.png" %}" alt="optional logo"> <span class="logo_title">Dylan Pereira</span></a></div>
 
                <!-- MAIN MENU -->
-
                <div id="mainmenu" class="menu_container">
                     <label class="mobile_collapser">MENU</label>
                     <!-- Mobile menu title -->
@@ -466,7 +465,21 @@
 
 
 
-                         
+                         <div class="cat_react col-xs-12 col-sm-6 col-md-4 col-lg-4">
+                              <div class="portfolio_item"> <a href="https://dylan814.github.io/picsum/">
+                                   <figure style="background-image:url({% static "images/portfolio/portfolio9.PNG" %})">
+                                        <figcaption>
+                                             <div class="portfolio_description">
+                                                 <h3>I created a mock ecommerce site in React that uses some advanced features of React like
+                                                  React Hook, React Router, React Context API</h3>
+                                                  
+                                                  <p>Clicking on the link takes you to the live website</p>
+                                             </div>
+                                        </figcaption>
+                                   </figure>
+                                   </a> </div>
+                                   <div class="centered_button"><a class="btn btn-primary" href="https://github.com/dylan814/picsum">See Code on GitHub</a></div>
+                         </div>
                          
                     </div>
                </div>
