change dylan_repo to project1

--- a/templates/index.html
+++ b/templates/index.html
@@ -319,7 +319,7 @@
                     <div class="row isotope_portfolio_container">
                          <div class="cat_html col-xs-12 col-sm-6 col-md-4 col-lg-4">
 
-                              <div class="portfolio_item"> <a href="https://dylan814.github.io/dylan_repo/">
+                              <div class="portfolio_item"> <a href="https://dylan814.github.io/project1/">
                                    <figure style="background-image:url({% static "images/portfolio/portfolio1.png" %})">
                                         <figcaption>
                                              <div class="portfolio_description">
@@ -333,7 +333,7 @@
                                    </figure>
                                    
                                    </a></div>
-                                   <div class="centered_button"><a class="btn btn-primary" href="https://github.com/dylan814/dylan_repo">See Code on GitHub</a></div>
+                                   <div class="centered_button"><a class="btn btn-primary" href="https://github.com/dylan814/project1">See Code on GitHub</a></div>
 
                          </div>
                          
